# memtrace

./: README.md  dune-project  memtrace.opam  memtrace.opam.template  missinglocoutput  runtest.sh
.github/workflows/: build.yml
docs/: protobuf.md
examples/: dune  testproto.ml
examples/go_example/: go.mod  go.sum  go_example.go
src/: backtrace_codec.mli  buf.ml  buf.mli  ctf_to_proto.ml  ctf_to_proto.mli  dune  linux_memory_map.ml  location.ml  location.mli  location_codec.ml  location_codec.mli  macos_memory_map.ml  memory_map.mli  memprof_tracer.ml  memprof_tracer.mli  memprof_tracer_proto.ml  memprof_tracer_proto.mli  memtrace.ml  memtrace.mli  memtrace_old.mli  profile.ml  profile.mli  proto.ml  proto.mli  trace.ml  trace.mli  trace_s.ml  trace_s.mli  writer_helper.ml  writer_helper.mli  writer_interface.mli
src/c/: libmem_mappings.dylib  mem_mappings.c
test/: convert_test.ml  copy.ml  dune  fork.ml  test.ml  trace.ml
