(library
 (name memtrace)
 (public_name memtrace)
 (modules backtrace_codec buf ctf_to_proto
          geometric_sampler location_codec
          location
          trace_s
          proto profile
          trace
          memtrace)
 (libraries unix threads pbrt))

;; Generate protobuf serialisation
(rule
 (targets profile.ml profile.mli)
 (deps
   (:proto profile.proto))
 (action
   (run ocaml-protoc %{proto} --binary --ml_out .)))